--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".PHeartApplication"
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
+        android:theme="@style/MainTheme"
         tools:ignore="UnusedAttribute">
 
         <activity
@@ -20,7 +21,5 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="edu.uaux.pheart.DisplayActivity" />
     </application>
 </manifest>
