--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -60,6 +60,7 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 proguard-dictionaries = { id = "ru.cleverpumpkin.proguard-dictionaries-generator", version.ref = "proguard-dictionaries" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 android-junit5 = { id = "de.mannodermaus.android-junit5", version.ref = "android-junit5" }
+parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 
 [libraries]
 # Kotlinx
