--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:installLocation="auto">
@@ -15,16 +16,20 @@
         android:supportsRtl="true"
         android:theme="@style/MainTheme"
         tools:ignore="UnusedAttribute">
+        <activity
+            android:name=".measure.MeasureResultsActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
 
         <activity
-            android:name="edu.uaux.pheart.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".measure.MeasureActivity"
             android:screenOrientation="portrait"
@@ -47,4 +52,5 @@
             android:name="com.google.mlkit.vision.DEPENDENCIES"
             android:value="face" />
     </application>
+
 </manifest>
