--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <application
         android:name=".PHeartApplication"
         android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MainTheme"
@@ -52,5 +53,4 @@
             android:name="com.google.mlkit.vision.DEPENDENCIES"
             android:value="face" />
     </application>
-
 </manifest>
